--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+	<style>
+
+	</style>
 
 	</head>
 	<body>
@@ -68,6 +71,16 @@
 		<aside id="fh5co-aside" role="complementary" class="border js-fullheight">
 
 			<h1 id="fh5co-logo"><a href="index.html"><img src="images/logo_1.jpeg" width="70%"></a></h1>
+			
+			<div style="width: 100%; margin-bottom: 50px;" class="">
+				<ul>
+					<li style="display: inline-block; width: 20%; text-align:center;"><a href="https://www.facebook.com/yunosukeyamamoto"><i class="icon-facebook2"></i></a></li>
+					<li style="display: inline-block; width: 20%; text-align:center;"><a href="https://twitter.com/OZmusic_LTD"><i class="icon-twitter2"></i></a></li>
+					<li style="display: inline-block; width: 20%; text-align:center;"><a href="https://www.instagram.com/yamamotoyunosuke/"><i class="icon-instagram"></i></a></li>
+					<li style="display: inline-block; width: 20%; text-align:center;"><a href="https://www.youtube.com/channel/UCvE1tzt36odXqDh2hVAWZJg"><i class="icon-youtube2"></i></a></li>
+				</ul>
+			</div>
+
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
 					<li class="fh5co-active"><a href="index.html">Home</a></li>
@@ -81,12 +94,12 @@
 
 			<div class="fh5co-footer">
 				<p><small>&copy; OZmusic ALL RIGHTS RESERVED.</span></small></p>
-				<ul>
+				<!-- <ul>
 					<li><a href="https://www.facebook.com/yunosukeyamamoto"><i class="icon-facebook2"></i></a></li>
 					<li><a href="https://twitter.com/OZmusic_LTD"><i class="icon-twitter2"></i></a></li>
-					<li><a href="https://www.instagram.com/yunosusan/"><i class="icon-instagram"></i></a></li>
+					<li><a href="https://www.instagram.com/yamamotoyunosuke/"><i class="icon-instagram"></i></a></li>
 					<li><a href="https://www.youtube.com/channel/UCvE1tzt36odXqDh2hVAWZJg"><i class="icon-youtube2"></i></a></li>
-				</ul>
+				</ul> -->
 			</div>
 
 		</aside>
@@ -98,41 +111,41 @@
 			<aside id="fh5co-hero" class="js-fullheight">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(images/img_1.jpeg);">
-				   		<div class="overlay"></div>
-				   		<div class="container-fluid">
-				   			<div class="row">
-					   			<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
-					   			</div>
-					   		</div>
-				   		</div>
-				   	</li>
-				   	<li style="background-image: url(images/img_2.jpeg);">
-				   		<div class="overlay"></div>
-				   		<div class="container-fluid">
-				   			<div class="row">
-					   			<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
-					   			</div>
-					   		</div>
-				   		</div>
-				   	</li>
-				   	<li style="background-image: url(images/img_3.jpeg);">
-				   		<div class="overlay"></div>
-				   		<div class="container-fluid">
-				   			<div class="row">
-					   			<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
-					   			</div>
-					   		</div>
-				   		</div>
-				   	</li>
-				  	</ul>
-			  	</div>
+						<li style="background-image: url(images/img_1.jpeg); width: 50%;">
+							<div class="overlay"></div>
+							<div class="container-fluid">
+								<div class="row">
+									<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
+									</div>
+								</div>
+							</div>
+						</li>
+						<li style="background-image: url(images/img_2.jpeg);">
+							<div class="overlay"></div>
+							<div class="container-fluid">
+								<div class="row">
+									<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
+									</div>
+								</div>
+							</div>
+						</li>
+						<li style="background-image: url(images/img_3.jpeg);">
+							<div class="overlay"></div>
+							<div class="container-fluid">
+								<div class="row">
+									<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
+									</div>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</aside>
 
 			<div class="fh5co-narrow-content">
 				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft" id="infomation">「山本直純」生誕90年（没後20年）を記念して<br>ゆうのすけの「オーケストラがやって来た」
 					というコンサートを開催します。
-					</h2>
+				</h2>
 
 
 				<div class="row row-bottom-padded-md">
@@ -152,31 +165,14 @@
 							<a href="./link/202212YamamotoOrch-A4-0930.pdf" class="blog-img"><img src="images/20221223.png" class="img-responsive"></a>
 						</div>
 					</div>
+				</div>
+
+				<div class="row row-bottom-padded-md">
+					<div class="desc">
+						<h4>チケットの情報は<a href="http://www.millionconcert.co.jp/concert/future/c_orchestra.html">こちら</a>から</h4>
 					</div>
-
 				</div>
 
-					<!-- <div class="desc">
-						<h5>〜 これまでにわかっている直純没後20年に関するコンサート・イヴェント 〜</h5>
-						<p>更新日時:7月2日<br></p>
-						<h6>その1</h6>
-						<p>日時 : 8月3日<br>
-						フェスタ サマーミューザ KAWASAKI 2022 新日本フィルハーモニー交響楽団 山本直純生誕90年と新日本フィル創立50年を祝う！<br>
-						<i class="icon-arrow-right3"></i> <a href="https://www.ongakunomachi.jp/event/32644/">詳細1</a><br>
-						<i class="icon-arrow-right3"></i> <a href="https://www.kawasaki-sym-hall.jp/festa/calendar/detail.php?id=3169">詳細2</a><br></p>
-						<h6>その2</h6>
-						<p>日時 : 8月6日<br>
-						下野竜也プレゼンツ！音楽の魅力発見プロジェクト 第9回 讃・山本直純没後20年「オーケストラがやっと来た」
-						<i class="icon-arrow-right3"></i> <a href="https://www.triphony.com/concert/detail/2022-02-005497.html">詳細</a><br></p>
-						<h6>その3</h6>
-						<p>日時 : 12月23日<br>
-						山本直純次男“ゆうのすけ”こと、山本祐ノ介の企画・出演によるコンサート・・・「ゆうのすけの “オーケストラがやって来た”」（第一生命ホール）</p>
-						<h6>その他</h6>
-						<p>他にもまた情報がわかりましたら、このサイトにてお知らせいたします。更新情報をメールでご希望の方は、表題に「情報希望」と書いたメールを<a href="mailto:info@ozmusic.jp">info@ozmusic.jp</a>までお送りください。または、<a href="https://lin.ee/tsg4JaY">オズ・ミュージック公式ライン<i class="icon-message"></i></a>からも情報を発信しています。</p>
-					
-					</div> -->
-
-				</div>
 			</div>
 
 		</div>
