--- a/event.html
+++ b/event.html
@@ -68,6 +68,16 @@
 		<aside id="fh5co-aside" role="complementary" class="border js-fullheight">
 
 			<h1 id="fh5co-logo"><a href="index.html"><img src="images/logo_1.jpeg" width="70%"></a></h1>
+
+			<div style="width: 100%; margin-bottom: 50px;" class="">
+				<ul>
+					<li style="display: inline-block; width: 20%; text-align:center;"><a href="https://www.facebook.com/yunosukeyamamoto"><i class="icon-facebook2"></i></a></li>
+					<li style="display: inline-block; width: 20%; text-align:center;"><a href="https://twitter.com/OZmusic_LTD"><i class="icon-twitter2"></i></a></li>
+					<li style="display: inline-block; width: 20%; text-align:center;"><a href="https://www.instagram.com/yamamotoyunosuke/"><i class="icon-instagram"></i></a></li>
+					<li style="display: inline-block; width: 20%; text-align:center;"><a href="https://www.youtube.com/channel/UCvE1tzt36odXqDh2hVAWZJg"><i class="icon-youtube2"></i></a></li>
+				</ul>
+			</div>
+
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -81,12 +91,12 @@
 
 			<div class="fh5co-footer">
 				<p><small>&copy; OZmusic ALL RIGHTS RESERVED.</span></small></p>
-				<ul>
+				<!-- <ul>
 					<li><a href="https://www.facebook.com/yunosukeyamamoto"><i class="icon-facebook2"></i></a></li>
 					<li><a href="https://twitter.com/OZmusic_LTD"><i class="icon-twitter2"></i></a></li>
-					<li><a href="https://www.instagram.com/yunosusan/"><i class="icon-instagram"></i></a></li>
+					<li><a href="https://www.instagram.com/yamamotoyunosuke/"><i class="icon-instagram"></i></a></li>
 					<li><a href="https://www.youtube.com/channel/UCvE1tzt36odXqDh2hVAWZJg"><i class="icon-youtube2"></i></a></li>
-				</ul>
+				</ul> -->
 			</div>
 
 		</aside>
