--- a/link.html
+++ b/link.html
@@ -68,6 +68,16 @@
 		<aside id="fh5co-aside" role="complementary" class="border js-fullheight">
 
 			<h1 id="fh5co-logo"><a href="index.html"><img src="images/logo_1.jpeg" width="70%"></a></h1>
+
+			<div style="width: 100%; margin-bottom: 50px;" class="">
+				<ul>
+					<li style="display: inline-block; width: 20%; text-align:center;"><a href="https://www.facebook.com/yunosukeyamamoto"><i class="icon-facebook2"></i></a></li>
+					<li style="display: inline-block; width: 20%; text-align:center;"><a href="https://twitter.com/OZmusic_LTD"><i class="icon-twitter2"></i></a></li>
+					<li style="display: inline-block; width: 20%; text-align:center;"><a href="https://www.instagram.com/yamamotoyunosuke/"><i class="icon-instagram"></i></a></li>
+					<li style="display: inline-block; width: 20%; text-align:center;"><a href="https://www.youtube.com/channel/UCvE1tzt36odXqDh2hVAWZJg"><i class="icon-youtube2"></i></a></li>
+				</ul>
+			</div>
+
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -81,12 +91,12 @@
 
 			<div class="fh5co-footer">
 				<p><small>&copy; OZmusic ALL RIGHTS RESERVED.</span></small></p>
-				<ul>
+				<!-- <ul>
 					<li><a href="https://www.facebook.com/yunosukeyamamoto"><i class="icon-facebook2"></i></a></li>
 					<li><a href="https://twitter.com/OZmusic_LTD"><i class="icon-twitter2"></i></a></li>
-					<li><a href="https://www.instagram.com/yunosusan/"><i class="icon-instagram"></i></a></li>
+					<li><a href="https://www.instagram.com/yamamotoyunosuke/"><i class="icon-instagram"></i></a></li>
 					<li><a href="https://www.youtube.com/channel/UCvE1tzt36odXqDh2hVAWZJg"><i class="icon-youtube2"></i></a></li>
-				</ul>
+				</ul> -->
 			</div>
 
 		</aside>
@@ -129,17 +139,17 @@
 						</div>
 					</div>
 
-					<!-- <div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="https://utanoyamamoto.com/ozmusicschool/" class="blog-img"><img src="images/link_4.jpeg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
-								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<h3><a href="https://juniorphil.com/">オズ音楽教室</a></h3>
+								<p>文京区にあるオズ音楽教室のホームページです</p>
+								<a href="https://utanoyamamoto.com/ozmusicschool/" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
-					</div> -->
+					</div>
+
 				</div>
 			</div>
 		
