--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title> オズ・ミュージック_</title>
+	<title> オズ・ミュージック</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="オズ・ミュージックの公式ホームページです" />
 	<meta name="keywords" content="" />
