--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			</nav>
 
 			<div class="fh5co-footer">
-				<p><small>&copy; OZmusic ALL RIGHTS RESERVED.</span></small></p>
+				<p><small>&copy; OZMUSIC ALL RIGHTS RESERVED.</span></small></p>
 				<!-- <ul>
 					<li><a href="https://www.facebook.com/yunosukeyamamoto"><i class="icon-facebook2"></i></a></li>
 					<li><a href="https://twitter.com/OZmusic_LTD"><i class="icon-twitter2"></i></a></li>
