--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<aside id="fh5co-hero" class="js-fullheight">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-						<li style="background-image: url(images/img_1.jpeg); width: 50%;">
+						<li style="background-image: url(images/img_1.jpeg);">
 							<div class="overlay"></div>
 							<div class="container-fluid">
 								<div class="row">
