--- a/index.html
+++ b/index.html
@@ -143,33 +143,31 @@
 			</aside>
 
 			<div class="fh5co-narrow-content">
-				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft" id="infomation">「山本直純」生誕90年（没後20年）を記念して<br>ゆうのすけの「オーケストラがやって来た」
-					というコンサートを開催します。
+				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft" id="infomation">〜　お知らせ　〜
 				</h2>
 
+				<div class="row row-bottom-padded-md">
+					<div class="desc">
+						<h4>オズ・ミュージックの公式ライン</h4>
+						<p>オズ・ミュージックではコンサートのお知らせなどを公式ラインでも行っております！</p>
+						<p><a href="https://lin.ee/tsg4JaY">こちら</a>より友達追加ができます．</p>
+					</div>
+				</div>
 
 				<div class="row row-bottom-padded-md">
 
 					<div class="desc">
-						<h4>日時：2022年12月23日（金）<br>①14時開演&nbsp;&nbsp;②19時開演 <br>場所：第一生命ホール（晴海トリトンスクエア内）</h4>
-						<p>山本直純生誕90年を記念して、直純の次男である「ゆうのすけ」によるバージョンで、「オーケストラがやって来た」が復活します。番組放映終了以来長年使用されることが無かった「オーケストラがやって来た」のタイトルを冠して、直純スピリットである「人々を笑顔に」する音楽を送るコンサート！是非オーケストラの魅力を楽しんでください。
-							第一生命ホールの入っている晴海トリトンスクエアにはレストランもたくさん入っています。また、銀座からもほど近く、ランチの後にコンサートに行くも良し、コンサートの後飲みに行くのも良し！
-						</p>
-
-						<p><a href="https://lin.ee/tsg4JaY">オズ・ミュージック公式ライン<i class="icon-message"></i></a>からもコンサートの情報はもちろん、リハーサルの様子、お得な情報を発信しますので、是非、お友達申請をお願いします。
-						</p>
-					</div>
-
-					<div class="col-md-10 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-						<div class="blog-entry">
-							<a href="./link/202212YamamotoOrch-A4-0930.pdf" class="blog-img"><img src="images/20221223.png" class="img-responsive"></a>
-						</div>
+						<h4>オズ音楽教室　生徒募集中</h4>
+						<p>オズ音楽教室では、フルート・チェロ・ピアノのレッスン生を募集しております！</p>
+						<p>詳細・お問い合わせは<a href="https://lin.ee/tsg4JaY">オズ音楽教室ホームページ</a>まで</p>
 					</div>
 				</div>
 
 				<div class="row row-bottom-padded-md">
 					<div class="desc">
-						<h4>チケットの情報は<a href="http://www.millionconcert.co.jp/concert/future/c_orchestra.html">こちら</a>から</h4>
+						<h4>高橋克典さんのYouTubeチャンネルに出演しました！</h4>
+						<p><a href="https://www.youtube.com/watch?v=TEm9Qt1Zc6g&ab_channel=%E9%AB%98%E6%A9%8B%E5%85%8B%E5%85%B8%2FKatsunoriTakahashi"><i class="icon-youtube2"></i> ザワつく音楽会のあと、チェロが大好きになりました。 vol.1</a></p>
+						<p><a href="https://www.youtube.com/watch?v=Q8CIyAMK8K8&ab_channel=%E9%AB%98%E6%A9%8B%E5%85%8B%E5%85%B8%2FKatsunoriTakahashi"><i class="icon-youtube2"></i> ザワつく音楽会のあと、チェロが大好きになりました。 vol.2</a></p>
 					</div>
 				</div>
 
