--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 					<div class="desc">
 						<h4>オズ音楽教室　生徒募集中</h4>
 						<p>オズ音楽教室では、フルート・チェロ・ピアノのレッスン生を募集しております！</p>
-						<p>詳細・お問い合わせは<a href="https://lin.ee/tsg4JaY">オズ音楽教室ホームページ</a>まで</p>
+						<p>詳細・お問い合わせは<a href="https://utanoyamamoto.com/ozmusicschool/">オズ音楽教室ホームページ</a>まで</p>
 					</div>
 				</div>
 
