youtube枠サイズ変更

--- a/movie.html
+++ b/movie.html
@@ -12,6 +12,11 @@
 	<meta name="description" content="オズ・ミュージックの公式ホームページです" />
 	<meta name="keywords" content="" />
 	<meta name="author" content="OZmusic" />
+	<style>
+		iframe {
+			max-width: 100%;
+		}
+	</style>
 
   	<!-- 
 	//////////////////////////////////////////////////////
