--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 					<li><a href="about_us.html">About us</a></li>
 					<li><a href="event.html">Event</a></li>
 					<li><a href="movie.html">Movie</a></li>
+					<li><a href="https://www.ozmusic.jp/ozmusicschool/">OZ MUSIC SCHOOL</a></li>
 					<li><a href="link.html">Link</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
