--- a/ozmusicschool/index.html
+++ b/ozmusicschool/index.html
@@ -61,7 +61,7 @@
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="fh5co-top-logo">
-				<div id="fh5co-logo"><a href="index.html">オズ音楽教室</a></div>
+				<div id="fh5co-logo"><a href="index.html">Home</a></div>
 			</div>
 			<div class="fh5co-top-menu menu-1 text-center">
 				<ul>
@@ -76,12 +76,6 @@
 						</ul>
 					</li>
 					<li><a href="contact.html"><i class="icon-mail"></i>お問い合わせ</a></li>
-				</ul>
-			</div>
-			<div class="fh5co-top-social menu-1 text-right">
-				<ul class="fh5co-social">
-					<!-- SNSがある場合はここをつける -->
-					<!-- <li><a href="#"><i class="icon-twitter"></i></a></li> -->
 				</ul>
 			</div>
 		</div>
