問い合わせページ修正

--- a/ozmusicschool/contact.html
+++ b/ozmusicschool/contact.html
@@ -101,13 +101,13 @@
 					<div class="author">
 
 						<div class="desc animate-box" id="flute">
-							<h1><b></b>xxxx</b></h1><br>
+							<h1><b></b>オズ音楽教室Lineアカウント</b></h1><br>
 								<p>
-									準備中
+									<a href="https://lin.ee/N7DoMcO"><img height="36" border="0" src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png"></a>
 								</p>
-							<h3>xxx</h3>
+							<h3>オズ音楽教室Mailアドレス</h3>
 							<p>
-								xxx
+								<a href="mailto:oz.musicschool@gmail.com?subject=問い合わせ&amp;body=【お名前】：%0D%0A %0D%0A 【お問い合わせ内容】：&amp;cc=utanoyamamoto@gmail.com"><b><i class="icon-mail"></i> oz.musicschool@gmail.com</b></a>
 							</p>
 							<ul class="fh5co-social-icons">
 								<!-- もしSNSあればつける -->
