--- a/ozmusicschool/index.html
+++ b/ozmusicschool/index.html
@@ -124,7 +124,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>お問い合わせ</h2>
 					<p>体験レッスンのお申し込み、ご質問等はこちらからどうぞ</p>
-					<p><a href="#" class="btn btn-primary"><i class="icon-mail"></i>お問い合わせ</a></p>
+					<p><a href="contact.html" class="btn btn-primary"><i class="icon-mail"></i>お問い合わせ</a></p>
 				</div>
 			</div>
 		</div>
